[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = ""
authors = ["Minimata <minimata94@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
psycopg2 = "^2.9.9"
peewee = "^3.17.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
